--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,20 @@
 
 	<name>xspider</name>
 	<url>http://maven.apache.org</url>
+	<repositories><!-- 代码库 -->
+   <repository>
+      <id>maven-ali</id>
+      <url>http://maven.aliyun.com/nexus/content/groups/public//</url>
+      <releases>
+         <enabled>true</enabled>
+      </releases>
+      <snapshots>
+         <enabled>true</enabled>
+         <updatePolicy>always</updatePolicy>
+         <checksumPolicy>fail</checksumPolicy>
+      </snapshots>
+   </repository>
+</repositories>
 	<build>
 		<plugins>
 			<plugin>
