--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,16 @@
 				<mainClass>cn.edu.hfut.dmic.webcollector.ui.BreadthCrawlerUI</mainClass> 
 				</manifest> </archive> </configuration> </plugin> -->
 
-
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.6.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
 			<plugin>
 				<artifactId>maven-antrun-plugin</artifactId>
 				<executions>
